fix container building in v2
