# experiments_controller/executor/build_dataset.go
@@ -62,7 +62,7 @@ func executeBuildDataset(ctx context.Context, task *dto.UnifiedTask) error {
 			consts.LabelTaskID:    task.TaskID,
 			consts.LabelTraceID:   task.TraceID,
 			consts.LabelGroupID:   task.GroupID,
-			consts.LabelProjectID: strconv.Itoa(task.ProjectID),
+			consts.LabelProjectID: getProjectIDString(task.ProjectID),
 			consts.LabelTaskType:  string(consts.TaskTypeBuildDataset),
 			consts.LabelDataset:   payload.name,
 		}
